--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
